System.Logger POC